fix footnote word wrap

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -214,6 +214,24 @@ p {
         font-family: $t--family-sans;
     }
 
+    a {
+        /* These are technically the same, but use both */
+        overflow-wrap: break-word;
+        word-wrap: break-word;
+
+        -ms-word-break: break-all;
+        /* This is the dangerous one in WebKit, as it breaks things wherever */
+        word-break: break-all;
+        /* Instead use this non-standard one: */
+        word-break: break-word;
+
+        /* Adds a hyphen where the word breaks, if supported (No Blink) */
+        -ms-hyphens: auto;
+        -moz-hyphens: auto;
+        -webkit-hyphens: auto;
+        hyphens: auto;
+    }
+
      &::before {
          display: block;
          margin-bottom: 1em;
@@ -221,6 +239,9 @@ p {
      }
      ol {
          padding: 0;
+         @media (max-width: 1024px) {
+            padding-left: 0.5em;
+        }
      }
      li {
          list-style: decimal;
